--- a/styles/media.css
+++ b/styles/media.css
@@ -1,9 +1,102 @@
 
-    @media  screen and (max-width:576px){
-        .logo-title, .navbar {
-            flex-direction: column;
-        }
+    /* media */
+
+@media screen and (max-width:576px) {
+    .logo-navbar {
+        flex-direction: column;
+    }
+
+}
+
+
+
+@media screen and (min-width:577px) {
+    .logo-navbar {
+        margin-left: 150px;
+        margin-right: 150px;
+    }
+
+}
+
+@media screen and (max-width:576px) {
+    .banner-title {
+        font-size: 20px;
+        font-weight: 700;
+        text-align: justify;
+    }
+
+}
+
+@media screen and (min-width:577px) {
+    .banner-section {
+        margin-left: 150px;
+        margin-right: 150px;
         
     }
+
+}
+
+@media screen and (max-width:576px) {
+    .banner-description {
+        font-size: 10px;
+        padding: 0px 10px;
+        text-align: justify;
+        
+    }
+
+}
+
+@media screen and (max-width:576px) {
+    .banner-section {
+        text-align: center;
+        width: 300px;
+        height: 100px;
+        margin-top: 50px;
+        
+    }
+    
+}
+@media screen and (max-width:576px) {
+    .explore-button {
+        font-size: 15px;
+        font-weight: 600px;
+        padding: 5px 10px;
+        align-items: center;
+        justify-content: center;
+        
+    }
+
+}
+
+@media screen and (max-width:576px) {
+    .banner-image img{
+       width: 350px;
+       height: 220px;
+        
+    }
+
+}
+
+
+@media screen and (min-width:577px) {
+    .banner-image img{
+        margin-left: 150px;
+        margin-right: 150px;
+        
+    }
+
+}
+
+
+@media screen and (min-width:577px) {
+    .banner-image img{
+        width: 1040px;
+        height: 600px;
+         
+     }
+
+}
+
+
 
    
